<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/ep_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:focusable="true"
            android:text="@string/name_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ep_name_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:inputType="text" >
        </EditText>
        
        <CheckBox android:id="@+id/ep_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_title"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/ep_authors_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/authors_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ep_authors_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:inputType="text" >
        </EditText>
        
        <TextView
            android:id="@+id/ep_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/begin_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:paddingLeft="20dp" >

            <Button
                android:id="@+id/ep_begin_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:onClick="onDateClick"
                android:text="@string/date"
                android:textSize="25sp" />

            <Button
                android:id="@+id/ep_begin_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:onClick="onTimeClick"
                android:text="@string/time"
                android:textSize="25sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/ep_duration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/duration_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/ep_duration_edit"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:inputType="number" />

            <TextView
                android:id="@+id/ep_duration_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/duration_end"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/ep_reserved_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/reserved_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/ep_reserved_edit"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:inputType="number" />

            <TextView
                android:id="@+id/ep_reserved_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/duration_end"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
        
        <LinearLayout
	        android:id="@+id/ep_point_layout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
    	</LinearLayout>

        <TextView
            android:id="@+id/ep_notes_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/notes_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ep_notes_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="20dp"
            android:inputType="text" >
        </EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ep_button_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:onClick="onSubmit"
                android:text="@string/submit"
                android:textSize="25sp" />

            <Button
                android:id="@+id/ep_button_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:onClick="onCancel"
                android:text="@string/cancel"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>