<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor="@color/red"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/organizators_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:text="@string/organizators_title"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/organizators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/organizators_title"
        android:layout_marginLeft="30dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/locations_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/organizators"
        android:text="@string/locations_title"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/locations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/locations_title"
        android:layout_marginLeft="30dp"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/begin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locations"
        android:text="@string/begin_title"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/begin_title"
        android:layout_marginLeft="30dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/duration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/begin"
        android:text="@string/duration_title"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/duration_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/duration_title"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:text="@string/duration_end"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/reservedtime_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/duration_layout"
        android:text="@string/reserved_title"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reservedtime_title"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/reservedtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:text="@string/duration_end"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>